Skeleton for telerpresence contact article

--- a/aalto.bib
+++ b/aalto.bib
@@ -76,6 +76,30 @@
   language = {en}
 }
 
+@book{amboMechanicalLove2009,
+  title = {Mechanical Love},
+  author = {Ambo, Phie},
+  year = {2009},
+  publisher = {{Tju Bang Film 2 [etc.][prod.]: Danish Documentary}},
+  isbn = {87-92273-03-3}
+}
+
+@article{amichai-hamburgerContactHypothesisReconsidered2006,
+  title = {The {{Contact Hypothesis Reconsidered}}: {{Interacting}} via the {{Internet}}},
+  shorttitle = {The {{Contact Hypothesis Reconsidered}}},
+  author = {{Amichai-Hamburger}, Yair and McKenna, Katelyn Y. A.},
+  year = {2006},
+  month = apr,
+  volume = {11},
+  pages = {825--843},
+  issn = {1083-6101, 1083-6101},
+  doi = {10.1111/j.1083-6101.2006.00037.x},
+  file = {/home/avnerus/Zotero/storage/HXQPGJAD/Amichai-Hamburger and McKenna - 2006 - The Contact Hypothesis Reconsidered Interacting v.pdf},
+  journal = {Journal of Computer-Mediated Communication},
+  language = {en},
+  number = {3}
+}
+
 @article{amichai-hamburgerStructuredUnstructuredIntergroup2015,
   title = {Structured and Unstructured Intergroup Contact in the Digital Age},
   author = {{Amichai-Hamburger}, Yair and Hasler, B{\'e}atrice S. and {Shani-Sherman}, Tal},
@@ -89,6 +113,11 @@
   file = {/home/avnerus/Zotero/storage/JR4C25SW/Amichai-Hamburger et al. - 2015 - Structured and unstructured intergroup contact in .pdf},
   journal = {Computers in Human Behavior},
   language = {en}
+}
+
+@misc{Aoki,
+  title = {Aoki},
+  howpublished = {https://www.ux-xu.com/}
 }
 
 @book{augusterodinRodinArtArtists2012,
@@ -148,6 +177,11 @@
   journal = {The European Physical Journal A},
   language = {en},
   number = {9}
+}
+
+@article{benkhelifaEnemy,
+  title = {The {{Enemy}}},
+  author = {Ben Khelifa, Karim}
 }
 
 @article{birnbaumWhenSexMore2006,
@@ -227,6 +261,27 @@
   number = {1}
 }
 
+@article{brownIntegrativeTheoryIntergroup2005,
+  title = {An Integrative Theory of Intergroup Contact},
+  author = {Brown, Rupert and Hewstone, Miles},
+  year = {2005},
+  volume = {37},
+  pages = {255--343},
+  file = {/home/avnerus/Zotero/storage/WJJTYMPG/Brown and Hewstone - 2005 - An integrative theory of intergroup contact.pdf},
+  journal = {Advances in experimental social psychology},
+  number = {37}
+}
+
+@inproceedings{caldwellTelepresenceVisualAudio1994,
+  title = {Tele-Presence: Visual, Audio and Tactile Feedback and Control of a Twin Armed Mobile Robot},
+  booktitle = {Proceedings of the 1994 {{IEEE International Conference}} on {{Robotics}} and {{Automation}}},
+  author = {Caldwell, Darwin G. and Wardle, Andrew and Goodwin, Michael},
+  year = {1994},
+  pages = {244--249},
+  publisher = {{IEEE}},
+  isbn = {0-8186-5330-2}
+}
+
 @inproceedings{campanellaEdenWireWebcameras2000,
   title = {Eden by Wire: Webcameras and the Telepresent Landscape},
   shorttitle = {Eden by Wire},
@@ -259,6 +314,16 @@
   number = {2}
 }
 
+@article{casaquiManagementHappinessProduction2016,
+  title = {Management of Happiness, Production of Affects and the Spirit of Capitalism: International Narratives of Transformation from {{Coca}}-{{Cola}} Brand},
+  author = {Casaqui, Vander and Riegel, Viviane},
+  year = {2016},
+  volume = {22},
+  pages = {293--314},
+  journal = {The Journal of International Communication},
+  number = {2}
+}
+
 @article{chalmers1995facing,
   title = {Facing up to the Problem of Consciousness},
   author = {Chalmers, David J},
@@ -277,6 +342,11 @@
   pages = {246--276},
   publisher = {{Oxford University Press}},
   journal = {Consciousness in the physical world: Perspectives on Russellian monism}
+}
+
+@misc{colaSmallWorldMachines,
+  title = {Small {{World Machines}}},
+  author = {Cola, Coca}
 }
 
 @article{coyleBioinspiredSoftRobotics2018,
@@ -302,6 +372,14 @@
   year = {2014},
   pages = {69--76},
   publisher = {{Routledge}}
+}
+
+@book{crimmensDramaTherapyStorymaking2006,
+  title = {Drama Therapy and Storymaking in Special Education},
+  author = {Crimmens, Paula},
+  year = {2006},
+  publisher = {{Jessica Kingsley Publishers}},
+  isbn = {1-84642-486-0}
 }
 
 @article{cuervoMerleauPontyThesisVertical2013,
@@ -332,6 +410,20 @@
   year = {2003},
   pages = {267--276},
   journal = {Machines That Become Us: The Social Context of Personal Communication Technology}
+}
+
+@book{deangelisPositiveFeedbackNatural2012,
+  title = {Positive Feedback in Natural Systems},
+  author = {DeAngelis, Donald Lee and Post, Wilfred M. and Travis, Curtis C.},
+  year = {2012},
+  edition = {Softcover reprint of the hardcover first edition 1986},
+  publisher = {{Springer-Verlag}},
+  address = {{Berlin Heidelberg New York Tokyo}},
+  file = {/home/avnerus/Zotero/storage/AZ8DSLV8/DeAngelis et al. - 2012 - Positive feedback in natural systems.pdf},
+  isbn = {978-3-642-82627-6 978-3-642-82625-2},
+  language = {en},
+  number = {volume 15},
+  series = {Biomathematics}
 }
 
 @book{deleuzeDialoguesII2007,
@@ -397,6 +489,20 @@
   journal = {Group Processes \& Intergroup Relations},
   language = {en},
   number = {1}
+}
+
+@book{dovidioNaturePrejudiceFifty2005,
+  title = {On the Nature of Prejudice: Fifty Years after {{Allport}}},
+  shorttitle = {On the Nature of Prejudice},
+  editor = {Dovidio, John F. and Glick, Peter Samuel and Rudman, Laurie A.},
+  year = {2005},
+  publisher = {{Blackwell Pub}},
+  address = {{Malden, MA}},
+  file = {/home/avnerus/Zotero/storage/EMI945F2/Dovidio et al. - 2005 - On the nature of prejudice fifty years after Allp.pdf},
+  isbn = {978-1-4051-2750-9 978-1-4051-2751-6},
+  keywords = {Allport; Gordon W,Gordon Willard,Nature of prejudice,Prejudices},
+  language = {en},
+  lccn = {BF575.P9 O62 2005}
 }
 
 @inproceedings{dreyfusTelepistemologyDescartesLast2000,
@@ -573,6 +679,17 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   volume = {1},
   pages = {1--21},
   issn = {1080-6547},
+  journal = {Imago}
+}
+
+@article{freudUncanny1919a,
+  title = {The {{Uncanny}}},
+  author = {Freud, Sigmund},
+  year = {1919},
+  volume = {1},
+  pages = {1--21},
+  issn = {1080-6547},
+  file = {/home/avnerus/Zotero/storage/XYPA7IQQ/Freud - 1919 - The Uncanny(2).pdf},
   journal = {Imago}
 }
 
@@ -833,6 +950,15 @@ Although derived from a relatively small number of studies, these results sugges
   language = {en}
 }
 
+@incollection{heppMediatizedWorldsUnderstanding2014,
+  title = {Mediatized Worlds\textemdash{}Understanding Everyday Mediatization},
+  booktitle = {Mediatized Worlds},
+  author = {Hepp, Andreas and Krotz, Friedrich},
+  year = {2014},
+  pages = {1--15},
+  publisher = {{Springer}}
+}
+
 @article{heymanSocialMediaDelinguistification2015,
   title = {Social {{Media}}, {{Delinguistification}} and {{Colonization}} of {{Lifeworld}}: {{Changing Faces}} of {{Facebook}}},
   shorttitle = {Social {{Media}}, {{Delinguistification}} and {{Colonization}} of {{Lifeworld}}},
@@ -894,6 +1020,24 @@ Although derived from a relatively small number of studies, these results sugges
   issn = {0263-2764, 1460-3616},
   doi = {10.1177/0263276416688542},
   journal = {Theory, Culture \& Society},
+  language = {en},
+  number = {1}
+}
+
+@article{hoffmanDesigningRobotsMovement2014,
+  title = {Designing {{Robots With Movement}} in {{Mind}}},
+  author = {Hoffman, Guy and Ju, Wendy},
+  year = {2014},
+  month = mar,
+  volume = {3},
+  pages = {89--122},
+  issn = {2163-0364},
+  doi = {10.5898/JHRI.3.1.Hoffman},
+  abstract = {This paper makes the case for designing interactive robots with their expressive movement in mind. As people are highly sensitive to physical movement and spatiotemporal affordances, well-designed robot motion can communicate, engage, and offer dynamic possibilities beyond the machines' surface appearance or pragmatic motion paths. We present techniques for movement centric design, including character animation sketches, video prototyping, interactive movement explorations, Wizard of Oz studies, and skeletal prototypes. To illustrate our design approach, we discuss four case studies: a social head for a robotic musician, a robotic speaker dock listening companion, a desktop telepresence robot, and a service robot performing assistive and communicative tasks. We then relate our approach to the design of non-anthropomorphic robots and robotic objects, a design strategy that could facilitate the feasibility of real-world human-robot interaction.},
+  copyright = {Authors who publish with this journal agree to the following terms:     Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a~ Creative Commons Attribution License  that allows others to share the work with an acknowledgment of the work's authorship and initial publication in this journal.       Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book) with an acknowledgment of its initial publication in this journal.      Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See~ The Effect of Open Access ).},
+  file = {/home/avnerus/Zotero/storage/9S58TTKF/Hoffman and Ju - 2014 - Designing Robots With Movement in Mind.pdf;/home/avnerus/Zotero/storage/DXAFG9N6/168.html},
+  journal = {Journal of Human-Robot Interaction},
+  keywords = {case studies,design,expressive movement,gestures,human-robot interaction,movement,non-anthropomorphic,non-humanoid},
   language = {en},
   number = {1}
 }
@@ -1129,6 +1273,15 @@ Although derived from a relatively small number of studies, these results sugges
   isbn = {0-521-38938-0}
 }
 
+@article{kenworthyIntergroupContactWhen2005,
+  title = {Intergroup Contact: {{When}} Does It Work, and Why},
+  author = {Kenworthy, Jared B. and Turner, Rhiannon N. and Hewstone, Miles and Voci, Alberto},
+  year = {2005},
+  pages = {278--292},
+  publisher = {{Blackwell Malden, MA}},
+  journal = {On the nature of prejudice: Fifty years after Allport}
+}
+
 @misc{kerokerobonitoKeroKeroBonito2016,
   title = {Kero {{Kero Bonito}} - {{Break}}},
   author = {{Kero Kero Bonito}},
@@ -1140,6 +1293,11 @@ Filmed at home and on tour.
 
 iTunes - https://itunes.apple.com/us/album/bre...
 Spotify - https://play.spotify.com/album/1DCQYj...}
+}
+
+@misc{khaledMonitorMan,
+  title = {Monitor {{Man}}},
+  author = {Khaled, Yassine}
 }
 
 @article{kimBioinspiredDualmorphingStretchable2019,
@@ -1201,12 +1359,31 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@misc{kravarikThisGoldBox2017,
+  title = {This Gold Box Is 'Better than {{Facebook}}'},
+  author = {Kravarik, Jason},
+  year = {2017},
+  month = apr,
+  abstract = {Thousands of commuters buzz by it; dozens more see it from the Starbucks line less than 100 feet away, but only a few enter this gold box in the middle of downtown Los Angeles capable of transporting those that dare to far-flung and hard to reach places around the world.},
+  file = {/home/avnerus/Zotero/storage/KQAH5KXR/index.html},
+  howpublished = {https://www.cnn.com/style/article/portals-project-los-angeles/index.html},
+  journal = {CNN Style},
+  language = {en}
+}
+
 @book{kressMultimodalitySocialSemiotic2009,
   title = {Multimodality: {{A}} Social Semiotic Approach to Contemporary Communication},
   author = {Kress, Gunther},
   year = {2009},
   publisher = {{Routledge}},
   isbn = {1-134-36047-9}
+}
+
+@book{labanMasteryMovement1971,
+  title = {The {{Mastery}} of {{Movement}}},
+  author = {Laban, Rudolf and Ullmann, Lisa},
+  year = {1971},
+  month = jan
 }
 
 @misc{leedshackerspaceMakingMachinableWax,
@@ -1255,6 +1432,12 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   pages = {19--24},
   journal = {Journal of Adult Education},
   number = {1}
+}
+
+@misc{LetRobotUser,
+  title = {Let's {{Robot}} - {{User Created Robotic Telepresence Network}}},
+  file = {/home/avnerus/Zotero/storage/Y4WBMYV3/letsrobot.tv.html},
+  howpublished = {https://letsrobot.tv/}
 }
 
 @article{liFluiddrivenOrigamiinspiredArtificial2017,
@@ -1315,6 +1498,15 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {2013},
   publisher = {{MIT Press}},
   isbn = {0-262-01919-1}
+}
+
+@book{maleticBodyspaceexpressionDevelopmentRudolf2011,
+  title = {Body-Space-Expression: {{The}} Development of {{Rudolf Laban}}'s Movement and Dance Concepts},
+  author = {Maletic, Vera},
+  year = {2011},
+  volume = {75},
+  publisher = {{Walter de Gruyter}},
+  isbn = {3-11-086183-6}
 }
 
 @article{maozDoesContactWork2011,
@@ -1493,18 +1685,6 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {eng}
 }
 
-@misc{MetaanalyticTestIntergroup,
-  title = {A Meta-Analytic Test of Intergroup Contact Theory.},
-  file = {/home/avnerus/Zotero/storage/JXC3BA5H/2006-07099-004.html},
-  howpublished = {https://psycnet.apa.org/fulltext/2006-07099-004.pdf}
-}
-
-@misc{MetaanalyticTestIntergroupa,
-  title = {A Meta-Analytic Test of Intergroup Contact Theory.},
-  file = {/home/avnerus/Zotero/storage/XANMAQDR/2006-07099-004.html},
-  howpublished = {https://psycnet.apa.org/fulltext/2006-07099-004.pdf}
-}
-
 @book{meyerIntercorporealityEmergingSocialities2017,
   title = {Intercorporeality: Emerging Socialities in Interaction},
   shorttitle = {Intercorporeality},
@@ -1525,6 +1705,27 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   author = {Middleton, Christine},
   pages = {267},
   language = {en}
+}
+
+@article{millsPersonalizedSpeechSynthesis2014,
+  title = {Towards Personalized Speech Synthesis for Augmentative and Alternative Communication},
+  author = {Mills, Timothy and Bunnell, H. Timothy and Patel, Rupal},
+  year = {2014},
+  volume = {30},
+  pages = {226--236},
+  journal = {Augmentative and Alternative Communication},
+  number = {3}
+}
+
+@misc{MishuLarivIto,
+  title = {Mishu {{Lariv Ito}}}
+}
+
+@misc{mjiTapiaCommunicationRobot2015,
+  title = {Tapia - {{Communication Robot}}},
+  author = {{MJI}},
+  year = {2015},
+  howpublished = {https://mjirobotics.co.jp/en/}
 }
 
 @article{moriUncannyValleyField2012,
@@ -1580,12 +1781,62 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@article{nakataExpressionEmotionIntention,
+  title = {Expression of {{Emotion}} and {{Intention}} by {{Robot Body Movement}}},
+  author = {Nakata, Toru and Sato, Tomomasa and Mori, Taketoshi},
+  pages = {8},
+  abstract = {A framework and methodology to realize robot-to-human behavioral expression is proposed. Human-robot symbiosis requires to enhance nonverbal communication between humans and robots. The proposed methodology is based on movement analysis theories of dance psychology researchers, namely Laban, Lamb and Kestenberg. Two experiments on robot-to-human behavioral expression are also presented to support the methodology. One is an experiment to produce familiarity with robot-to-human tactile reaction. The other is an experiment to express a robot's emotions by its dances. This methodology will be a key to realize robots that work close to humans cooperatively.},
+  file = {/home/avnerus/Zotero/storage/QBR3IJBK/Nakata et al. - Expression of Emotion and Intention by Robot Body .pdf},
+  language = {en}
+}
+
+@inproceedings{nakataExpressionEmotionIntention1998,
+  title = {Expression of Emotion and Intention by Robot Body Movement},
+  booktitle = {Proceedings of the 5th International Conference on Autonomous Systems},
+  author = {Nakata, Toru and Sato, Tomomasa and Mori, Taketoshi and Mizoguchi, Hiroshi},
+  year = {1998}
+}
+
+@article{nicholsVisualizingSpacetimeCurvature2011,
+  title = {Visualizing Spacetime Curvature via Frame-Drag Vortexes and Tidal Tendexes: {{General}} Theory and Weak-Gravity Applications},
+  author = {Nichols, David A. and Owen, Robert and Zhang, Fan and Zimmerman, Aaron and Brink, Jeandrew and Chen, Yanbei and Kaplan, Jeffrey D. and Lovelace, Geoffrey and Matthews, Keith D. and Scheel, Mark A.},
+  year = {2011},
+  volume = {84},
+  pages = {124014},
+  journal = {Physical Review D},
+  number = {12}
+}
+
+@incollection{nishioGeminoidTeleoperatedAndroid2007,
+  title = {Geminoid: {{Teleoperated}} Android of an Existing Person},
+  booktitle = {Humanoid Robots: {{New}} Developments},
+  author = {Nishio, Shuichi and Ishiguro, Hiroshi and Hagita, Norihiro},
+  year = {2007},
+  publisher = {{IntechOpen}}
+}
+
 @article{oconnellUnlawfulKillingCombat2009,
   title = {Unlawful Killing with Combat Drones: A Case Study of {{Pakistan}}, 2004-2009},
   author = {O'Connell, Mary Ellen},
   year = {2009},
   pages = {09--43},
   journal = {SHOOTING TO KILL: THE LAW GOVERNING LETHAL FORCE IN CONTEXT, Simon Bronitt, ed., Forthcoming}
+}
+
+@article{ogawaExploringNaturalReaction2011,
+  title = {Exploring the {{Natural Reaction}} of {{Young}} and {{Aged Person}} with {{Telenoid}} in a {{Real World}}},
+  author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Balistreri, Giuseppe and Watanabe, Tetsuya and Ishiguro, Hiroshi and {ATR Intelligent Robotics and Communication Laboratory, 2-2-2 Hikaridai, Seikacho, Souraku-gun, Kyoto 619-0288, Japan} and {Graduate School of Engineering Science, Osaka University, 1-3 Machikaneyama, Toyonaka, Osaka 560-8531, Japan} and {Dipartimento di Ingegneria Informatica, Universit{\`a} degli Studi di Palermo, Viale delle Scienze, Edificio 690128 Palermo, Italia}},
+  year = {2011},
+  month = jul,
+  volume = {15},
+  pages = {592--597},
+  issn = {1883-8014, 1343-0130},
+  doi = {10.20965/jaciii.2011.p0592},
+  abstract = {This paper describes two field tests conducted with visitors to shopping mall and with aged persons. For both of the field tests, we used an android we developed which is called ``Telenoid R1'' or `Telenoid'' for short. For both field tests we interviewed visitors regarding their impressions of the Telenoid. The results of the shopping mall showed that almost half of the interviewed visitors reported having negative feelings toward the Telenoid. But once they gave the Telenoid a hug, they changed their opinions from negative to positive. Meanwhile, the results of the other test showed that the majority of aged persons reported having a positive opinion. As a remarkable point, all aged persons who interacted with the Telenoid gave it a hug without any specific instruction from us. These results show that the Telenoid must be an acceptable medium for the elderly. However, the Telenoid might also be acceptable for younger persons because the visitors we interviewed developed positive feelings toward the robot after giving it a hug. These results inform our future research working with and developing androids.},
+  file = {/home/avnerus/Zotero/storage/ZNEIAV7J/Ogawa et al. - 2011 - Exploring the Natural Reaction of Young and Aged P.pdf},
+  journal = {Journal of Advanced Computational Intelligence and Intelligent Informatics},
+  language = {en},
+  number = {5}
 }
 
 @inproceedings{oharaEverydayDwellingWhatsApp2014,
@@ -1598,6 +1849,10 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   isbn = {1-4503-2540-8}
 }
 
+@article{Omnipresenz,
+  title = {Omnipresenz}
+}
+
 @misc{parker-popeTruthSpinningDancer2008,
   title = {The {{Truth About}} the {{Spinning Dancer}}},
   author = {{Parker-Pope}, Tara},
@@ -1607,6 +1862,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Well},
   keywords = {Mind},
   language = {en-US}
+}
+
+@misc{paroPAROTherapeuticRobot,
+  title = {{{PARO Therapeutic Robot}}},
+  author = {Paro},
+  file = {/home/avnerus/Zotero/storage/U54CYDVD/www.parorobots.com.html},
+  howpublished = {http://www.parorobots.com/}
+}
+
+@misc{ParoRobotGoogle,
+  title = {Paro Robot - {{Google Scholar}}},
+  file = {/home/avnerus/Zotero/storage/ZUZPAUFA/scholar.html},
+  howpublished = {https://scholar.google.fi/scholar?hl=en\&as\_sdt=0\%2C5\&q=paro+robot\&btnG=}
 }
 
 @misc{patelBenefitsBeingCyborg,
@@ -1650,6 +1918,14 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Smart Materials and Structures},
   language = {en},
   number = {9}
+}
+
+@article{pettigrewAllportIntergroupContact2005,
+  title = {Allport's Intergroup Contact Hypothesis: {{Its}} History and Influence},
+  author = {Pettigrew, Thomas F. and Tropp, Linda R.},
+  year = {2005},
+  pages = {262--277},
+  journal = {On the nature of prejudice: Fifty years after Allport}
 }
 
 @article{pettigrewIntergroupPrejudiceIts2011,
@@ -1747,6 +2023,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   note = {OCLC: ocn277204419}
 }
 
+@misc{rebenBlabDroid,
+  title = {{{BlabDroid}}},
+  author = {Reben, Alexander},
+  howpublished = {http://blabdroid.com/},
+  keywords = {embodiment}
+}
+
 @book{reynoldsUnderstandingExistentialism2014,
   title = {Understanding Existentialism},
   author = {Reynolds, Jack},
@@ -1801,6 +2084,30 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   eprinttype = {arxiv},
   isbn = {978-85-7811-079-6},
   pmid = {25246403}
+}
+
+@inproceedings{sabanovicPARORobotAffects2013,
+  title = {{{PARO}} Robot Affects Diverse Interaction Modalities in Group Sensory Therapy for Older Adults with Dementia},
+  booktitle = {2013 {{IEEE}} 13th {{International Conference}} on {{Rehabilitation Robotics}} ({{ICORR}})},
+  author = {{\v S}abanovi{\'c}, Selma and Bennett, Casey C. and Chang, Wan-Ling and Huber, Lesa},
+  year = {2013},
+  pages = {1--6},
+  publisher = {{IEEE}},
+  isbn = {1-4673-6024-4}
+}
+
+@incollection{saguyRoleGroupPower2013,
+  title = {The Role of Group Power in Intergroup Contact},
+  booktitle = {Advances in Intergroup Contact},
+  author = {Saguy, Tamar and Tropp, Linda R. and Hawi, Diala},
+  year = {2013},
+  pages = {113--131},
+  publisher = {{Psychology Press}},
+  address = {{New York, NY, US}},
+  abstract = {An extensive meta-analysis of the contact literature, summarizing over five hundred studies across a wide range of contexts and countries, found that although intergroup contact was related to improved attitudes among members of both advantaged and disadvantaged groups, it was found to be significantly less effective for improving the outgroup attitudes of disadvantaged group members than those of advantaged group members. Furthermore, optimal conditions in the contact situation (e.g., cooperation, equal status, institutional support) were found to facilitate the effect of contact only for members of advantaged groups; the presence of these conditions did not have a significant impact on disadvantaged group members involved in intergroup contact. Researchers have begun to consider differences in how advantaged versus disadvantaged group members approach, experience, and are affected by intergroup contact. For instance, findings from a U.S. national survey show that while positive effects of contact are typically observed among White Americans, they are significantly inhibited among Black Americans who perceive high levels of discrimination against their racial group. Experimental and diary studies further indicate that exposure to prejudice and discrimination can undermine minorities' willingness to engage in contact with members of the advantaged majority group. Still, such findings offer little information regarding the ways in which group differences in power are enacted in contact settings, or how intergroup contact can either perpetuate or ameliorate group differences in power. In this chapter, we review emerging evidence that can advance our understanding of the intersection of power and contact between groups. We begin by considering how psychological processes associated with group position (i.e., advantaged versus disadvantaged group membership) relate to how people approach contact situations in terms of their goals and preferences for the content of intergroup encounters. We then describe research that links the consequences of intergroup contact to power asymmetries between groups and to processes that promote social change. We conclude by discussing the implications of this work for research and practice on improving intergroup relations. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  file = {/home/avnerus/Zotero/storage/DUFUSNNW/2012-28154-005.html},
+  isbn = {978-1-84872-114-2 978-1-84872-054-1 978-0-203-09546-1},
+  keywords = {Attitudes,Disadvantaged,Ingroup Outgroup,Intergroup Dynamics,Interpersonal Control,Social Change,Social Perception,Socioeconomic Class Attitudes}
 }
 
 @book{sartreBeingNothingness2012,
@@ -1902,6 +2209,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {en}
 }
 
+@article{sevdalisCapturedMotionDance2011,
+  title = {Captured by Motion: {{Dance}}, Action Understanding, and Social Cognition},
+  shorttitle = {Captured by Motion},
+  author = {Sevdalis, Vassilis and Keller, Peter E.},
+  year = {2011},
+  month = nov,
+  volume = {77},
+  pages = {231--236},
+  issn = {02782626},
+  doi = {10.1016/j.bandc.2011.08.005},
+  abstract = {In this review article, we summarize the main findings from empirical studies that used dance-related forms of rhythmical full body movement as a research tool for investigating action understanding and social cognition. This work has proven to be informative about behavioral and brain mechanisms that mediate links between perceptual and motor processes invoked during the observation and execution of spatially\textendash{}temporally coordinated action and interpersonal interaction. The review focuses specifically on processes related to (a) motor experience and expertise, (b) learning and memory, (c) action, intention, and emotion understanding, and (d) audio-visual synchrony and timing. Consideration is given to the relationship between research on dance and more general embodied cognition accounts of action understanding and social cognition. Finally, open questions and issues concerning experimental design are discussed with a view to stimulating future research on social-cognitive aspects of dance.},
+  file = {/home/avnerus/Zotero/storage/C35A3PLI/Sevdalis and Keller - 2011 - Captured by motion Dance, action understanding, a.pdf},
+  journal = {Brain and Cognition},
+  language = {en},
+  number = {2}
+}
+
 @book{shapiroRoutledgeHandbookEmbodied2014,
   title = {The {{Routledge}} Handbook of Embodied Cognition},
   editor = {Shapiro, Lawrence A.},
@@ -1916,6 +2240,11 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   series = {Routledge Handbooks in Philosophy}
 }
 
+@misc{sharedstudiosPortals,
+  title = {Portals},
+  author = {{SharedStudios}}
+}
+
 @article{shintakeSoftPneumaticGelatin2017,
   title = {Soft {{Pneumatic Gelatin Actuator}} for {{Edible Robotics}}},
   author = {Shintake, Jun and Sonar, Harshal and Piskarev, Egor and Paik, Jamie and Floreano, Dario},
@@ -1925,6 +2254,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   eprint = {1703.01423},
   eprinttype = {arxiv},
   isbn = {9781538626818}
+}
+
+@article{shnabelNeedsbasedModelReconciliation2008,
+  title = {A Needs-Based Model of Reconciliation: {{Satisfying}} the Differential Emotional Needs of Victim and Perpetrator as a Key to Promoting Reconciliation.},
+  shorttitle = {A Needs-Based Model of Reconciliation},
+  author = {Shnabel, Nurit and Nadler, Arie},
+  year = {2008},
+  volume = {94},
+  pages = {116--132},
+  issn = {1939-1315, 0022-3514},
+  doi = {10.1037/0022-3514.94.1.116},
+  abstract = {The authors propose that conflict threatens different psychological resources of victims and perpetrators and that these threats contribute to the maintenance of conflict (A. Nadler, 2002; A. Nadler \& I. Liviatan, 2004; A. Nadler \& N. Shnabel, in press). On the basis of this general proposition, the authors developed a needs-based model of reconciliation that posits that being a victim is associated with a threat to one's status and power, whereas being a perpetrator threatens one's image as moral and socially acceptable. To counter these threats, victims must restore their sense of power, whereas perpetrators must restore their public moral image. A social exchange interaction in which these threats are removed should enhance the parties' willingness to reconcile. The results of 4 studies on interpersonal reconciliation support these hypotheses. Applied and theoretical implications of this model are discussed.},
+  file = {/home/avnerus/Zotero/storage/EUJZ48PL/Shnabel and Nadler - 2008 - A needs-based model of reconciliation Satisfying .pdf},
+  journal = {Journal of Personality and Social Psychology},
+  language = {en},
+  number = {1}
 }
 
 @article{sholtTherapeuticQualitiesClaywork2006,
@@ -1994,6 +2339,17 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   author = {Soft Robotics Toolkit},
   year = {2019},
   abstract = {Fiber-reinforced actuators are a class of soft actuator that have been developed by a number of research groups around the world in recent years.~ The basic design consists of an elastomer bladder wrapped with inextensible reinforcements.},
+  language = {en}
+}
+
+@misc{SomeoneInstalledSeeSaws2019,
+  title = {Someone {{Installed See}}-{{Saws At The US}}-{{Mexico Border So Kids Can Play Together}}},
+  year = {2019},
+  month = jul,
+  abstract = {One of its creators described it as an ``event filled with joy, excitement, and togetherness''.},
+  file = {/home/avnerus/Zotero/storage/K4JYXHK5/see-saws-us-mexico-border_uk_5d4023d4e4b0db8affae339e.html},
+  howpublished = {https://www.huffingtonpost.co.uk/entry/see-saws-us-mexico-border\_uk\_5d4023d4e4b0db8affae339e},
+  journal = {HuffPost UK},
   language = {en}
 }
 
@@ -2124,6 +2480,25 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {3}
 }
 
+@incollection{thimmMediatizedPoliticsStructures2014,
+  title = {Mediatized Politics\textemdash{{Structures}} and Strategies of Discursive Participation and Online Deliberation on {{Twitter}}},
+  booktitle = {Mediatized Worlds},
+  author = {Thimm, Caja and {Dang-Anh}, Mark and Einsp{\"a}nner, Jessica},
+  year = {2014},
+  pages = {253--270},
+  publisher = {{Springer}}
+}
+
+@inproceedings{tsuiExploringUseCases2011,
+  title = {Exploring Use Cases for Telepresence Robots},
+  booktitle = {2011 6th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
+  author = {Tsui, Katherine M. and Desai, Munjal and Yanco, Holly A. and Uhlik, Chris},
+  year = {2011},
+  pages = {11--18},
+  publisher = {{IEEE}},
+  isbn = {1-4673-4395-1}
+}
+
 @misc{UnicodeEmoji2019,
   title = {Unicode {{Emoji}}},
   year = {2019},
@@ -2157,6 +2532,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {en}
 }
 
+@article{vezzaliImprovingIntergroupRelations2014,
+  title = {Improving Intergroup Relations with Extended and Vicarious Forms of Indirect Contact},
+  author = {Vezzali, Loris and Hewstone, Miles and Capozza, Dora and Giovannini, Dino and W{\"o}lfer, Ralf},
+  year = {2014},
+  month = jan,
+  volume = {25},
+  pages = {314--389},
+  issn = {1046-3283, 1479-277X},
+  doi = {10.1080/10463283.2014.982948},
+  file = {/home/avnerus/Zotero/storage/D88KR6W2/Vezzali et al. - 2014 - Improving intergroup relations with extended and v.pdf},
+  journal = {European Review of Social Psychology},
+  language = {en},
+  number = {1}
+}
+
 @article{vitielloQuantumDissipationInformation2007,
   title = {Quantum Dissipation and Information: {{A}} Route to Consciousness Modeling},
   author = {Vitiello, Giuseppe},
@@ -2167,6 +2557,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 }
 
 @book{vonlabanChoreutics1966,
+  title = {Choreutics},
+  author = {Von Laban, Rudolf},
+  year = {1966},
+  publisher = {{London: Macdonald \& Evans}}
+}
+
+@book{vonlabanChoreutics1966a,
   title = {Choreutics},
   author = {Von Laban, Rudolf},
   year = {1966},
@@ -2256,12 +2653,32 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   language = {en}
 }
 
+@misc{WhatUncannyValley,
+  title = {What {{Is}} the {{Uncanny Valley}}? - {{IEEE Spectrum}}},
+  shorttitle = {What {{Is}} the {{Uncanny Valley}}?},
+  file = {/home/avnerus/Zotero/storage/V8SVR2NY/what-is-the-uncanny-valley.html},
+  howpublished = {https://spectrum.ieee.org/automaton/robotics/humanoids/what-is-the-uncanny-valley},
+  journal = {IEEE Spectrum: Technology, Engineering, and Science News},
+  language = {en},
+  note = {Library Catalog: spectrum.ieee.org}
+}
+
 @unpublished{wikstromCollaborativeBlockDesign,
   title = {Collaborative {{Block Design Task}} for {{Assessing Pair Performance}} in {{Virtual Reality}} and {{Reality}}},
   author = {Wikstrom, Valtteri and Martikainen, Silja and Falcon, Mari and Ruistola, Juha and Saarikivi, Katri},
   abstract = {Collaborative problem solving is more important than ever as the problems we try to solve become increasingly complex. Meanwhile, personal and professional communication has moved from face-to-face to computer-mediated environments, but there is little understanding on how the characteristics of these environments affect the quality of interaction and joint problem solving. To develop this understanding, methods are needed for measuring success of collaboration. For this purpose, we created a collaborative block design task intended to evaluate and quantify pair performance. In this task, participants need to share information to complete visuospatial puzzles. Two versions of the task are described: a physical version and one that can be completed in virtual reality. A preliminary study was conducted with the physical version (N = 18 pairs) and the results were used to develop the task for a second study in virtual reality (N = 31 pairs). Performance measures were developed for the task, and we found that pair performance was normally distributed and positively associated with visuospatial skills, but not with other participant-specific background factors. The task specifications are released for the research community to apply and adapt in the study of computer-mediated social interaction.},
   language = {en},
   type = {Under Review}
+}
+
+@inproceedings{xueComparisonExpressiveSpeech2018,
+  title = {A {{Comparison}} of {{Expressive Speech Synthesis Approaches}} Based on {{Neural Network}}},
+  booktitle = {Proceedings of the {{Joint Workshop}} of the 4th {{Workshop}} on {{Affective Social Multimedia Computing}} and First {{Multi}}-{{Modal Affective Computing}} of {{Large}}-{{Scale Multimedia Data}}},
+  author = {Xue, Liumeng and Zhu, Xiaolian and An, Xiaochun and Xie, Lei},
+  year = {2018},
+  pages = {15--20},
+  publisher = {{ACM}},
+  isbn = {1-4503-5985-X}
 }
 
 @article{yaffeRuleFactFiction2011,
